added some responsiveness

--- a/pokemart.html
+++ b/pokemart.html
@@ -129,7 +129,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-6 userStories">
+            <div class="col-lg-6 userStories">
                 <p class="user_stories">After identifying the users’ main goals and behaviours through user research and persona creation, I found that <span class="bolder">the main issues my design decisions needed to solve involved:</span></p>
                 <br>
                 <ul>
@@ -145,7 +145,7 @@
                 </ul>
                 <p>I was able to create user stories and define the MVP based on this information.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <img class="user_stories_image" src="img/pokemart/userStories.png">
             </div>
         </div>
@@ -159,7 +159,7 @@
             </p>
         </div>
 
-        <img class="userFlow_image" src="img/pokemart/userFlow.jpeg">
+        <img class="userFlow_image image_center" src="img/pokemart/userFlow.jpeg">
 
         <hr class="divider">
 
@@ -192,7 +192,7 @@
             <p>I began the design process by sketching rough ideas on paper to quickly find alternative setups that worked best.
             </p>
         </div>
-        <img class="lowFidelity_image" src="img/pokemart/lowFidelity.JPG"/>
+        <img class="lowFidelity_image image_center" src="img/pokemart/lowFidelity.JPG"/>
 
         <hr class="divider">
 
@@ -202,7 +202,7 @@
             <p>I turned my revised sketches into an interactive prototype done with Adobe XD. I defined the UI elements, visual hierarchy and design patterns.
             </p>
         </div>
-        <img class="mediumFidelity_image" src="img/pokemart/mediumFidelity.jpg"/>
+        <img class="mediumFidelity_image image_center" src="img/pokemart/mediumFidelity.jpg"/>
 
         <hr class="divider">
 
@@ -213,11 +213,11 @@
             <br>
         </div>
 
-        <img class="highFidelity_image" src="img/pokemart/highFidelity1.png"/>
-        <img class="highFidelity_image" src="img/pokemart/highFidelity2.png"/>
-        <img class="highFidelity_image" src="img/pokemart/highFidelity3.png"/>
+        <img class="highFidelity_image image_center" src="img/pokemart/highFidelity1.png"/>
+        <img class="highFidelity_image image_center" src="img/pokemart/highFidelity2.png"/>
+        <img class="highFidelity_image image_center" src="img/pokemart/highFidelity3.png"/>
 
-        <iframe class="prototype_video" src="https://drive.google.com/file/d/1LAsHqkndLPdToNWH8lEFvun99_2KY2j0/preview" ></iframe>
+        <iframe class="prototype_video image_center" src="https://drive.google.com/file/d/1LAsHqkndLPdToNWH8lEFvun99_2KY2j0/preview" ></iframe>
 
         <!-- Design -->
         <h1 class="new_section new_section2">DESIGN</h1>
@@ -249,7 +249,7 @@
             <h4>Colours & Typography</h4>
             <p>To respect the theme of the product, I have made careful decisions in terms of colours and typography. </p>
         </div>
-        <img class="design_image" src="img/pokemart/typography.png">
+        <img class="design_image image_center" src="img/pokemart/typography.png">
 
         <hr class="divider">
 
@@ -258,7 +258,7 @@
             <h4>Vector Elements</h4>
             <p>For the products of this app, I used <span class="bolder" style="font-style: italic">Affinity Designer</span> to create vector illustrations of the major 25 items found in Poké Marts.</p>
         </div>
-        <img class="design_image" src="img/pokemart/pokemonItems.jpg"
+        <img class="design_image image_center" src="img/pokemart/pokemonItems.jpg"
 
         </div>
     </body>
