--- a/pokemart.html
+++ b/pokemart.html
@@ -130,7 +130,7 @@
 
         <div class="row">
             <div class="col-lg-6 userStories">
-                <p class="user_stories">After identifying the users’ main goals and behaviours through user research and persona creation, I found that <span class="bolder">the main issues my design decisions needed to solve involved:</span></p>
+                <p class="column_image user_stories">After identifying the users’ main goals and behaviours through user research and persona creation, I found that <span class="bolder">the main issues my design decisions needed to solve involved:</span></p>
                 <br>
                 <ul>
                     <li>
@@ -146,7 +146,7 @@
                 <p>I was able to create user stories and define the MVP based on this information.</p>
             </div>
             <div class="col-lg-6">
-                <img class="user_stories_image" src="img/pokemart/userStories.png">
+                <img class="column_image user_stories_image" src="img/pokemart/userStories.png">
             </div>
         </div>
 
