added margins to mobile

--- a/pokemart.html
+++ b/pokemart.html
@@ -132,7 +132,7 @@
             <div class="col-lg-6 userStories">
                 <p class="column_image user_stories">After identifying the users’ main goals and behaviours through user research and persona creation, I found that <span class="bolder">the main issues my design decisions needed to solve involved:</span></p>
                 <br>
-                <ul>
+                <ul class="column_image">
                     <li>
                         The speed of delivery based on location
                     </li>
@@ -143,7 +143,7 @@
                         Ability to purchase any item from a Pokè Mart
                     </li>
                 </ul>
-                <p>I was able to create user stories and define the MVP based on this information.</p>
+                <p class="column_image">I was able to create user stories and define the MVP based on this information.</p>
             </div>
             <div class="col-lg-6">
                 <img class="column_image user_stories_image" src="img/pokemart/userStories.png">
@@ -174,11 +174,11 @@
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <h4 class="competitive_heading">Deliveroo</h4>
+                <h4 class="column_image competitive_heading">Deliveroo</h4>
             <img class="column_image" src="img/pokemart/deliveroo_img.png">
             </div>
             <div class="col-lg-6">
-                <h4>Uber Eats</h4>
+                <h4 class="column_image">Uber Eats</h4>
             <img class="column_image" src="img/pokemart/ubereats_img.png">
             </div>
         </div>
