uploaded teppanyaki site

--- a/teppanyakibar.html
+++ b/teppanyakibar.html
@@ -39,6 +39,8 @@
         <div class="intro_container">
             <h1>Teppanyaki Bar</h1>
             <p>This project involved the design and development of a fully responsive website for the local Japanese restaurant, Teppanyaki Bar.</p>
+            <br><br>
+            <p>See full working website <a href="teppanyaki_site/teppanyakibar.html">here</a></p>
         </div>
         <img class="hero_image" src="img/teppanyaki_cover.png">
 
@@ -153,21 +155,16 @@
         </div>
         <img class="mediumFidelity_image image_center" src="img/teppanyakibar/mediumFidelity.png"/>
 
-        <hr class="divider">
+        <!-- Website Development -->
+        <h1 class="new_section new_section2">WEBSITE DEVELOPMENT</h1>
 
         <!-- Website Development -->
         <div class="text_container">
-            <h3>High-Fidelity Mockups</h3>
-            <p>After more research and usability testing, I designed the final screens with Adobe XD. The process involved a lot of trial and error with the design choices, as this was my first mobile app design. My aim was to create a clean, modern aesthetic to help users fulfil their goals easier and quicker. The onboarding illustrations were designed in Affinity Designer to stick with the playful theme of colours and Pokémon feel.
-            <br>
+            <p class="development_paragraph">I developed the website using HTML, CSS and JavaScript. This was a strong learning process as I followed along many youtube tutorials and online sources to transform the design into a fully functional  website. 
+            </p>
         </div>
 
-        <img class="highFidelity_image image_center" src="img/pokemart/highFidelity1.png"/>
-        <img class="highFidelity_image image_center" src="img/pokemart/highFidelity2.png"/>
-        <img class="highFidelity_image image_center" src="img/pokemart/highFidelity3.png"/>
-
-        <iframe class="prototype_video image_center" src="https://drive.google.com/file/d/1LAsHqkndLPdToNWH8lEFvun99_2KY2j0/preview" ></iframe>
-
+        <img class="highFidelity_image teppanyaki_highFid image_center" src="img/teppanyakibar/highFidelity.png"/>
         
         </div>
     </body>
