added about page, footer, fixed some responsiveness

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <!-- Projects -->
-        <h1 class="project_title">Poké Mart</h1>
+        <h1 class="project_title">Poké Mart Delivery</h1>
         <a href="pokemart.html" class="project_container">
             <img src="img/pokemart_cover.png">
         </a>
@@ -51,8 +51,20 @@
         <a href="teppanyakibar.html" class="project_container">
             <img src="img/teppanyaki_cover.png">
         </a>
-
-        
         </div>
     </body>
+
+    <footer class="footer">
+        <div class="row">
+            <div class="col-4">
+                <a href="mailto:davina.t@hotmail.com">davina.t@hotmail.com</a>
+            </div>
+            <div class="col-4">
+                <a href="https://www.linkedin.com/in/davina-t/">LinkedIn</a>
+            </div>
+            <div class="col-4">
+                <a href="https://dribbble.com/davina-t" >Dribbble</a>
+            </div>
+        </div>
+    </footer>
 </html>
