--- a/teppanyakibar.html
+++ b/teppanyakibar.html
@@ -121,7 +121,6 @@
             <h3>Competitive Analysis</h3>
             <p>I gathered some inspiration by looking at existing websites for other Teppanyaki restaurants. These included Asami Teppanyaki and Kamikaze Teppanyaki.
             </p>
-            
         </div>
         <div class="row">
             <div class="col-lg-6">
@@ -129,7 +128,7 @@
             <img class="column_image" src="img/teppanyakibar/asami_img.png">
             </div>
             <div class="col-lg-6">
-                <h4 class="column_image">Uber Eats</h4>
+                <h4 class="column_image">Kamikaze Teppanyaki</h4>
             <img class="column_image" src="img/teppanyakibar/kamikaze_img.png">
             </div>
         </div>
@@ -168,4 +167,18 @@
         
         </div>
     </body>
+
+    <footer class="footer">
+        <div class="row">
+            <div class="col-4">
+                <a href="mailto:davina.t@hotmail.com">davina.t@hotmail.com</a>
+            </div>
+            <div class="col-4">
+                <a href="https://www.linkedin.com/in/davina-t/">LinkedIn</a>
+            </div>
+            <div class="col-4">
+                <a href="https://dribbble.com/davina-t" >Dribbble</a>
+            </div>
+        </div>
+    </footer>
 </html>
