--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             <ul>
                 <li>Product Design</li>
                 <li>UX Design</li>
-                <li>UI Design/li>
+                <li>UI Design</li>
                 <li>Prototyping</li>
                 <li>Affinity Designer</li>
                 <li>Adobe XD</li>
