--- a/index.html
+++ b/index.html
@@ -1,70 +1,110 @@
 <!DOCTYPE html>
 <html lang="en" class="sr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
 
-        <title>Davina Tan</title>
+    <title>Davina Tan</title>
 
-        <!-- Link CSS, fonts, icons, bootstrap and jQuery -->
+    <!-- Link CSS, fonts, icons, bootstrap and jQuery -->
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
 
-        <script src="https://kit.fontawesome.com/85f138c613.js" crossorigin="anonymous"></script>
-        <link href="style.css" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans&display=swap" rel="stylesheet">
-    </head>
+    <script
+      src="https://kit.fontawesome.com/85f138c613.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-    <body>
-        <div class="SITE_CONTAINER">
+  <body>
+    <div class="SITE_CONTAINER">
+      <!-- Navigation -->
+      <nav class="navbar navbar-light navbar-expand-lg">
+        <a class="navbar-brand" href="index.html">D.</a>
+        <button
+          type="button"
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbar-collapse-main"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-light navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">D.</a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse-main">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-            <div class="collapse navbar-collapse justify-content-end" id="navbar-collapse-main">
-                <ul class="nav navbar-nav">
-                    <li><a class="nav-link" href="about.html">About</a></li>
-                </ul>
-            </div>
-        </nav>
-
-        <!-- Profile -->
-        <div class="profile_container">
-            <h1>Davina Tan</h1>
-            <p>I'm a final year Computer Science student, aspiring to be a <span style="color: var(--normalBlue) !important">UX/UI Designer</span>. I'm always open to new opportunities and learning more every day.</p>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbar-collapse-main"
+        >
+          <ul class="nav navbar-nav">
+            <li><a class="nav-link" href="about.html">About</a></li>
+          </ul>
         </div>
+      </nav>
 
-        <!-- Projects -->
-        <h1 class="project_title">Poké Mart Delivery</h1>
-        <a href="pokemart.html" class="project_container">
-            <img src="img/pokemart_cover.png">
-        </a>
+      <!-- Profile -->
+      <div class="profile_container">
+        <h1>Davina Tan</h1>
+        <p>
+          I'm a recently graduated Computer Science student, aspiring
+          to be a
+          <span style="color: var(--normalBlue) !important;"
+            >UX/UI Designer</span
+          >. I'm always open to new opportunities and learning more
+          every day.
+        </p>
+      </div>
 
-        <h1 class="project_title">Teppanyaki Bar</h1>
-        <a href="teppanyakibar.html" class="project_container">
-            <img src="img/teppanyaki_cover.png">
-        </a>
-        </div>
-    </body>
+      <!-- Projects -->
+      <h1 class="project_title">Poké Mart Delivery</h1>
+      <a href="pokemart.html" class="project_container">
+        <img src="img/pokemart_cover.png" />
+      </a>
 
-    <footer class="footer">
-        <div class="row">
-            <div class="col-4">
-                <a href="mailto:davina.t@hotmail.com">davina.t@hotmail.com</a>
-            </div>
-            <div class="col-4">
-                <a href="https://www.linkedin.com/in/davina-t/">LinkedIn</a>
-            </div>
-            <div class="col-4">
-                <a href="https://dribbble.com/davina-t" >Dribbble</a>
-            </div>
-        </div>
-    </footer>
+      <h1 class="project_title">Teppanyaki Bar</h1>
+      <a href="teppanyakibar.html" class="project_container">
+        <img src="img/teppanyaki_cover.png" />
+      </a>
+    </div>
+  </body>
+
+  <footer class="footer">
+    <div class="row">
+      <div class="col-4">
+        <a href="mailto:davina.t@hotmail.com">davina.t@hotmail.com</a>
+      </div>
+      <div class="col-4">
+        <a href="https://www.linkedin.com/in/davina-t/">LinkedIn</a>
+      </div>
+      <div class="col-4">
+        <a href="https://dribbble.com/davina-t">Dribbble</a>
+      </div>
+    </div>
+  </footer>
 </html>
